public/styles/style.less
@import (inline) "../../node_modules/bootstrap/dist/css/bootstrap.css";
@import url('https://fonts.googleapis.com/css?family=Marcellus');

@color1: #D9CAB6;
@color2: #99805F;
@color3: #B7A388;
@color4: #FFF6EA;
@color5: #D9CAB6;
@highlight-color: #734d2a;
@red-highlight: #903;

body {
    background-color: @color2;
    font-family: 'Marcellus', serif;
}

.content {
    background-color: @color4;
    min-height: 400px;
    padding-left: 0;
    padding-right: 0;
    .container {
        padding: 110px 87px;
    }
}

.drop-cap:first-letter {
    color: @red-highlight;
    float: left;
    font-size: 75px;
    line-height: 60px;
    padding-top: 4px;
    padding-right: 8px;
    padding-left: 3px;
}

.navbar {
    background-color: @color1;
    overflow-y: hidden;
    align-items: flex-end;
    padding: 0;
    position: fixed;
    width: 1140px;
    z-index: 10;
    .mr-auto {
        padding: 0;
    }
    .navbar-brand {
        color: @highlight-color;
        padding: 15px 0 0 15px;
        margin-right: 0;
        min-height: 65px;
        img {
            margin: -27px 10px -27px -15px;
            width: 90px;
            height: 90px;
            float: left;
            max-width: none;
        }
        .title {
            line-height: 1;
            font-size: 29px;
        }
        .subtitle {
            font-size: 14px;
            color: #a57943;
        }
    }
    .navbar-nav {
        padding-right: 25px;
        .nav-link {
            padding: 10px 15px;
            &.active {
                border-bottom: 3px solid @red-highlight;
            }
            color: white;
        }
    }
}

.overview {
    margin-bottom: 20px;
}

//.navbar-nav {
//    text-align: right;
//}

.article-page {
    .container {
        padding: 0;
        position: fixed;
        left: 0;
        right: 0;
        top: 0;
        bottom: 0;
        background-color: @color4;
        .scrollable {
            position: absolute;
            bottom: 20px;
            top: 100px;
            display: flex;
            .article-list {
                flex-basis: 40%;
                overflow-y: auto;
                ul {
                    list-style: none;
                    padding-left: 10px;
                    .year-divider {
                        font-size: 78px;
                        line-height: 1;
                        color: gray;
                        padding: 20px 0;
                    }
                    li {
                        margin-right: 10px;
                        .selected {
                            background: #f3e6d6;
                            padding: 10px;
                            border-radius: 4px;
                        }
                        .selectable {
                            cursor: pointer;
                            padding: 10px;
                        }
                        .article-title {
                            font-size: 120%;
                        }
                        .article-publication {
                            color: grey;
                            font-style: italic;
                        }
                        .article-date {
                            color: grey;
                            font-style: italic;
                        }
                        .article-summary {

                        }
                    }
                }
            }
            .preview-panel {
                flex-basis: 60%;
                padding: 10px;
                .scrollable-preview {
                    overflow-y: auto;
                    position: fixed;
                    bottom: 12px;
                    top: 140px;
                    max-width: 660px;
                }
            }
        }
    }
    .preview-selection {
        text-align: center;
        a {
            margin: 0px;
            padding: 5px 18px;
            color: #98805f;
            &.selected {
                background: #997f5f;
                color: white;
                border-radius: 3px;
            }
        }
    }
    .preview-image {
        width: 100%;
    }
}

.about {
    img {
        float: right;
        border: 5px double #997f5f;
        margin-left: 35px;
        width: 300px;
    }
}

.home {
    min-height: 600px;
    img {
        float: left;
        border: 5px double #997f5f;
        margin-right: 35px;
        width: 300px;
    }
}

.record {
    table {
        tr.outer {
            border-bottom: 1px solid #dacab6;
            &:nth-child(odd) {
                background-color: #f3ebe1;
            }
        }
        tr.planned-only, tr.questionable {
            color: #b9b9b9;
            td.planned-only, td.questionable {
                color: #90897f;
                position: absolute;
                margin-top: 53px;
                margin-left: -40px;
                font-size: 150%;
                transform: rotate(-20deg);
            }
        }
        td {
            padding: 1px 10px;
            vertical-align: top;
            ul {
                list-style: none;
                padding-left: 0;
                margin-bottom: 0;
            }
        }
        .date {
            vertical-align: top;
            width: 120px;
        }
        .result {
            text-align: center;
            max-width: 70px;
        }
        .opponent {
            vertical-align: top;
            max-width: 150px;
            min-width: 135px;
        }
    }
}

.biography {
    .captioned-image {
        display: table;
        img {
            border: 5px double #997f5f;
        }
        .caption {
            display: table-caption;
            caption-side: bottom;
            text-align: center;
            font-size: 80%;
            margin-top: 8px;
        }
    }
    .reference {
        cursor: pointer;
        &:hover {
            color: #997f5f;
        }
        .superscript {
            font-variant: small-caps;
            vertical-align: super;
            margin-left: 2px;
            line-height: 0.5;
        }
    }

    .foot-note {
        position: fixed;
        bottom: 0;
        background: white;
        width: 1000px;
        margin: 0 auto;
        left: 0;
        right: 0;
        padding: 12px 25px 0;
        border-top-left-radius: 5px;
        border-top-right-radius: 5px;
        border: 1px solid #716556;
        border-bottom: none;
        max-height: 300px;
        overflow-y: auto;
        .fact {
            font-style: italic;
        }
        .article-publication {
            margin-left: 5px;
            color: grey;
            font-style: italic;
        }
        .close {
            font-family: sans-serif;
            font-size: 15pt;
        }
    }

    h2 {
        text-align: center;
        font-variant: all-small-caps;
        color: gray;
        font-size: 18pt;
    }

    .quote {
        display: block;
        font-style: italic;
        margin: 10px 20px;
        .attribution {
            display: block;
            .speaker {
                margin-left: 40px;
            }
            .quote-source {
                margin-left: 5px;
                font-size: 80%;
            }
        }
    }

    .pull-right {
        float: right;
        margin-left: 40px;
    }

    .pull-left {
        float: left;
        margin-right: 40px;
    }

    .inline {
        display: inline-table;
        margin: 0 20px 50px;
    }

    .misc-photos {
        text-align: center;
    }
}

@media (min-width: 576px) {
    .container {
        max-width: 100%;
    }
    .navbar {
        max-width: 100%;
    }
}

@media (min-width: 768px) {
    .container {
        max-width: 100%;
    }
    .navbar {
        max-width: 100%;
    }
}

@media (min-width: 992px) {
    .navbar {
        width: 100%;
        max-width: 100%;
    }
}

@media (min-width: 1200px) {
    .container {
        max-width: 1140px;
    }
    .navbar {
        max-width: 1140px;
    }
}

@media (max-width: 750px) {
    .content {
        .container {
            padding: 110px 10px;
            max-width: 100%;
        }
    }
    img {
        max-width: 90%;
    }
    .navbar {
        width: 100%;
        flex-flow: row nowrap;
        -ms-flex-pack: start;
        justify-content: flex-start;
        .title {
            display: none;
        }
        .subtitle {
            display: none;
        }
        .navbar-nav {
            font-size: 68%;
            flex-direction: row;
        }
    }
    table {
        overflow: auto;
        display: block;
    }
    .biography .foot-note {
        width: 100%;
    }
}

